--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.8"
 psycopg2-binary = "^2.9.10"
+pytest = "^8.3.4"
 
 
 [build-system]
